idf_component_register(SRCS "main.cpp"
                            "wifi_manager.cpp"
                            "sensor_monitor.cpp"
                            "servo_controller.cpp"
                            "web_server.cpp"
                            "ble_manager.cpp"
                    INCLUDE_DIRS ".")